--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,3 +146,7 @@ body {
 .image-gallery-thumbnails .image-gallery-thumbnails-container {
     text-align: start !important;
 }
+
+.react-datepicker-wrapper {
+    width: 100% !important;
+}
